--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
+    "@ericblade/quagga2": "^1.4.2",
     "@quasar/extras": "^1.5.2",
     "axios": "^0.18.1",
+    "jquery": "^3.6.0",
     "quagga": "^0.12.1",
     "quasar": "^1.1.6",
     "vue-i18n": "^8.0.0"
