--- a/package.json
+++ b/package.json
@@ -1,38 +1,38 @@
 {
-  "name": "quasar-barcode-reader",
-  "version": "0.0.1",
-  "description": "A Quasar Framework app",
-  "productName": "Quasar Barcode Reader",
-  "cordovaId": "org.cordova.quasar.app",
-  "author": "Patrick Monteiro <eng.patrickmonteiro@gmail.com>",
-  "private": true,
-  "scripts": {
-    "lint": "eslint --ext .js,.vue src",
-    "test": "echo \"No test specified\" && exit 0"
-  },
-  "dependencies": {
-    "@ericblade/quagga2": "^1.4.2",
-    "@quasar/extras": "^1.5.2",
-    "axios": "^0.18.1",
-    "jquery": "^3.6.0",
-    "quagga": "^0.12.1",
-    "quasar": "^1.1.6",
-    "vue-i18n": "^8.0.0"
-  },
-  "devDependencies": {
-    "@quasar/app": "^1.6.0",
-    "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.10.0",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-vue": "^5.0.0"
-  },
-  "engines": {
-    "node": ">= 8.9.0",
-    "npm": ">= 5.6.0",
-    "yarn": ">= 1.6.0"
-  },
-  "browserslist": [
-    "last 1 version, not dead, ie >= 11"
-  ]
+    "name": "quasar-barcode-reader",
+    "version": "0.0.1",
+    "description": "A Quasar Framework app",
+    "productName": "Quasar Barcode Reader",
+    "cordovaId": "org.cordova.quasar.app",
+    "author": "Patrick Monteiro <eng.patrickmonteiro@gmail.com>",
+    "private": true,
+    "scripts": {
+        "lint": "eslint --ext .js,.vue src",
+        "test": "echo \"No test specified\" && exit 0"
+    },
+    "dependencies": {
+        "@ericblade/quagga2": "^1.4.2",
+        "@quasar/extras": "^1.5.2",
+        "axios": "^0.18.1",
+        "jquery": "^3.6.0",
+        "quasar": "^1.1.6",
+        "vue-i18n": "^8.0.0",
+        "vue-quagga2": "git+https://github.com/DevinNorgarb/vue-quagga-2.git"
+    },
+    "devDependencies": {
+        "@quasar/app": "^1.6.0",
+        "@vue/eslint-config-standard": "^4.0.0",
+        "babel-eslint": "^10.0.1",
+        "eslint": "^5.10.0",
+        "eslint-loader": "^2.1.1",
+        "eslint-plugin-vue": "^5.0.0"
+    },
+    "engines": {
+        "node": ">= 8.9.0",
+        "npm": ">= 5.6.0",
+        "yarn": ">= 1.6.0"
+    },
+    "browserslist": [
+        "last 1 version, not dead, ie >= 11"
+    ]
 }
