--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@ericblade/quagga2": "^1.4.2",
         "@quasar/extras": "^1.5.2",
         "axios": "^0.18.1",
+        "dev-server": "^0.2.0",
         "jquery": "^3.6.0",
         "quasar": "^1.1.6",
         "vue-i18n": "^8.0.0",
@@ -21,6 +22,8 @@
     },
     "devDependencies": {
         "@quasar/app": "^1.6.0",
+        "@quasar/quasar-app-extension-qmarkdown": "^1.4.3",
+        "@vue/devtools": "^5.3.4",
         "@vue/eslint-config-standard": "^4.0.0",
         "babel-eslint": "^10.0.1",
         "eslint": "^5.10.0",
