--- a/src-cordova/package.json
+++ b/src-cordova/package.json
@@ -13,12 +13,14 @@
         "cordova-android": "^7.1.4",
         "cordova-plugin-barcodescanner": "^0.7.4",
         "cordova-plugin-compat": "^1.2.0",
+        "cordova-plugin-splashscreen": "^6.0.0",
         "cordova-plugin-whitelist": "^1.3.5"
     },
     "cordova": {
         "plugins": {
             "cordova-plugin-whitelist": {},
-            "cordova-plugin-barcodescanner": {}
+            "cordova-plugin-barcodescanner": {},
+            "cordova-plugin-splashscreen": {}
         },
         "platforms": [
             "android"
