--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@ericblade/quagga2": "^1.4.2",
         "@quasar/extras": "^1.5.2",
+        "@zxing/library": "^0.18.6",
         "axios": "^0.18.1",
         "dev-server": "^0.2.0",
         "jquery": "^3.6.0",
